# intfeat

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
data_utils/: __init__.py  preprocess.py
docs/: laplacian_histogram_smoothing.md  literature.md  project.md  strum_liouville_heavy_tailed_features.md
experiments/: __init__.py  plot_cvx_smoothers.py  plot_spectral_histogram_fits.py
experiments/criteo_fwfm/: README.md  __init__.py  artifacts.py  config.py  data_io.py  interactions.py  optuna_bspline_per_column_resumable.py  optuna_contiguous.py  optuna_head_contiguous_resumable.py  optuna_hybrid_bspline_sl_i11_potential_resumable.py  optuna_sl_conductance_resumable.py  optuna_sl_u_exp_valley_joint_resumable.py  optuna_sl_u_exp_valley_potential_resumable.py  optuna_sl_u_exp_valley_resumable.py  preprocess.py  refit_contiguous.py  report.py  run.py  schema.py  train.py  types.py
intfeat/: __init__.py  gram.py  hist_fit.py  missing_wrapper.py  orth.py  orth_base.py  strum_liouville.py  strum_liouville_transformer.py  viz.py
journal/: README.md  roadmap.md
math/: README.md  eigen_variational.md  graph_laplacians_and_discrete_sl.md  tridiagonal_jacobi_notes.md
notebooks/: atoms.ipynb  bultheel_atoms_exploration.ipynb  conjuage_poles_exploration.ipynb  criteo.ipynb  dirichlet_posterior_smooth.ipynb  discrete_strum_liouville_basis.ipynb  dist_estimation.ipynb  laplace_dist_estimation.ipynb  orthogonal_rational_exploration.ipynb  strum_liouville_news_popularity_toy.ipynb  strum_liouville_newsgroup_20_toy.ipynb  strum_liouville_transformer.ipynb
(+201 files in other folders)
